styles/state.css
/* 
state.css should contain any styling that changes upon user interaction or state change
Apply to hover state, before or after clicking on a link, focus and blur effects
Pseudo-classes and pseudo-elements should be included here

*/

legend {
    display: none;
}

body{
    overflow: hidden;
}

.slides{
  display: none;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

.btn:hover,input:hover,  input:focus{
  transition: 1s;
  border-color: black;
  background-color: white;
  color: black;
}

.shadow:hover{
  text-shadow: 2px 2px white;
  transition: 1s;
  color: white;
  background-color: transparent;
}

.animate{
  animation: animate 1s;
}

.display-on-mobile{
  display: none;
}

@keyframes animate{
  from{
    right:-300px;opacity:0
  } 
  to{
    bottom:0;opacity:1
  }
}

@media screen and (max-width: 425px){
  .hide-on-mobile{
      display: none;
  }

  .display-on-mobile{
    display: flex;
    justify-content: space-between;
    
    padding: 15vh 0;
  }
  
}

